# django_project

./: .env.sample  README.md  catalog.json  groups.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_remove_product_creation_date_and_more.py  0003_product_manufactured_at.py  0004_remove_product_manufactured_at.py  0005_post.py  0006_version.py  0007_alter_version_product_alter_version_version_number.py  0008_product_owner.py  0009_alter_product_options.py  0010_alter_product_options_product_is_published.py  0011_category_slug.py
catalog/templates/: base.html  contacts.html  home.html  product.html
catalog/templates/catalog/: base.html  category_confirm_delete.html  category_list.html  contacts.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: password_reset_done.html  password_reset_form.html  user_form.html
